--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,315 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="./css/tailwind.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;600;700;800&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="./scrollanimate.js"></script>
+	</head>
 
-        <link rel="stylesheet" href="./css/tailwind.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;600;700;800&display=swap"
-            rel="stylesheet">
-    </head>
+	<body>
+		<!-- Pickmylink new design -->
+		<div class="lan-body">
+			<div class="lan-head">
+				<img src="images/logo.svg" alt="pickmyad" class="logo-img" />
+				<div class="lan-btn">
+					<a href="https://app.pickmy.link/auth/v3/login"
+						><button class="btn-common login">Login</button></a
+					>
+					<a href="https://app.pickmy.link/auth/v3/login"
+						><button class="btn-common create-link">
+							Create you free link 🎉
+						</button></a
+					>
+				</div>
+			</div>
+			<div class="land-head zoo-in">
+				<h1>
+					one <span>link.</span><br />
+					endless possibilities
+				</h1>
+				<p class="zoo-in-i">
+					Share the online content you create, curate, and sell with over 30
+					million others. each from a different bio link.
+				</p>
+			</div>
+			<div class="profile-cre">
+				<div class="profile-input">
+					<span>pickmy.link/ </span>
+					<input
+						type="text"
+						autocomplete="off"
+						id="myClaim"
+						placeholder="yourname"
+					/>
+				</div>
+				<div class="land-claim">
+					<a href="https://app.pickmy.link/auth/v3/signup">
+						<button id="myLink">Grab your Pickmylink</button>
+					</a>
+				</div>
+			</div>
+			<!-- <div class="landmillions">
+				<ul style="transform: translateX(-34.4%) translateY(-50%)">
+					<li>
+						<h2>
+							millions of<br />
+							<span>dollars earned</span>
+						</h2>
+						<p>by creators selling on pickmy.link</p>
+					</li>
+					<li>
+						<h2>
+							millions of<br />
+							<span>dollars earned</span>
+						</h2>
+						<p>by creators selling on pickmy.link</p>
+					</li>
+					<li>
+						<h2>
+							millions of<br />
+							<span>dollars earned</span>
+						</h2>
+						<p>by creators selling on pickmy.link</p>
+					</li>
+				</ul>
+			</div> -->
+			<div class="carousel">
+				<div
+					class="carousel--wrap"
+					style="transform: translateX(-34.4%) translateY(-50%)"
+				>
+					<div class="carousel--item" style="transform: scale(1)">
+						<div><h2>millions of<br>
+                           <span> dollars earned</span>
+                           <p>by creators selling on pickmy.link</p>
+                        </h2>
+                        </div>
+					</div>
+					<div class="carousel--item" style="transform: scale(1)">
+						<div><h2>millions of<br>
+                            <span> dollars earned</span>
+                            <p>by creators selling on pickmy.link</p>
+                        </h2>
+                        </div>
+					</div>
+					<div class="carousel--item" style="transform: scale(1)">
+						<div><h2>millions of<br>
+                            <span> dollars earned</span>
+                            <p>by creators selling on pickmy.link</p>
+                        </h2>
+                        </div>
+					</div>
+				</div>
+				<div class="carousel--progress">
+					<div
+						class="carousel--progress-bar"
+						style="transform: scaleX(0.18)"
+					></div>
+				</div>
+			</div>
+		</div>
+		<div class="land-influ">
+			<div class="land-vlog">
+				<div class="land-a">
+					<span>I am a</span>
+					<button>vlogger</button>
+					<div>
+						<p>
+							Then you have an endless range of choices for a micro-landing
+							page.
+						</p>
+					</div>
+					<div class="land-lin">
+						<span>Profile Links</span>
+						<p>
+							Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident.
+						</p>
+					</div>
+					<div class="">
+						<span>Profile Links</span>
+						<p>
+							Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident.
+						</p>
+					</div>
+				</div>
+				<div class="land-vloger">
+					<img src="./images/test.webp" alt="pickmylink" />
+				</div>
+			</div>
+		</div>
+		<script id="rendered-js">
+			jQuery(".landmillions ul").on("mousemove", function (event) {
+				{
+					var mouse = {
+						x: 0, // Current x-axis position of mouse
+					};
+					var containerItems = jQuery(".landmillions ul").width();
+					var docWidth = jQuery(".landmillions ul").width();
 
-    <body>
-        <!-- Pickmylink new design -->
-        <div class="lan-body">
-            <div class="lan-head">
-                <img src="images/logo.svg" alt="pickmyad"
-                    class="logo-img">
-                <div class="lan-btn">
-                    <a href="https://app.pickmy.link/auth/v3/login"><button
-                            class="btn-common login">Login</button></a>
-                    <a href="https://app.pickmy.link/auth/v3/login"><button
-                            class="btn-common create-link">Create you free link
-                            🎉</button></a>
-                </div>
-            </div>
-            <div class="land-head zoo-in">
-                <h1>one <span>link.</span><br>
-                    endless possibilities</h1>
-                <p class="zoo-in-i">Share the online content you create, curate, and sell
-                    with
-                    over 30 million others. each from a different bio link.</p>
-            </div>
-            <div class="profile-cre zoom-in-b">
-                <div class="profile-input">
-                    <span>pickmy.link/ </span>
-                    <input type="text" autocomplete="off" id="myClaim"
-                        placeholder="yourname" />
-                </div>
-                <div class="land-claim">
-                    <a href="https://app.pickmy.link/auth/v3/signup">
-                        <button id="myLink">Grab your Pickmylink</button>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </body>
+					var docMinWidth = jQuery(".landmillions ul").width();
+
+					mouse.x = event.clientX || event.pageX;
+
+					mouse = mouse.x - 0;
+					var Translate = (mouse * 200) / docWidth;
+
+					jQuery(".landmillions ul").css({
+						"-webkit-transform":
+							"translateX(-" + Translate + "%) translateY(-50%)",
+						"-moz-transform":
+							"translateX(-" + Translate + "%) translateY(-50%)",
+						transform: "translateX(-" + Translate + "%) translateY(-50%)",
+					});
+				}
+			});
+		</script>
+		<script id="rendered-js">
+			const lerp = (f0, f1, t) => (1 - t) * f0 + t * f1;
+			const clamp = (val, min, max) => Math.max(min, Math.min(val, max));
+
+			class DragScroll {
+				constructor(obj) {
+					this.$el = document.querySelector(obj.el);
+					this.$wrap = this.$el.querySelector(obj.wrap);
+					this.$items = this.$el.querySelectorAll(obj.item);
+					this.$bar = this.$el.querySelector(obj.bar);
+					this.init();
+				}
+
+				init() {
+					this.progress = 0;
+					this.speed = 0;
+					this.oldX = 0;
+					this.x = 0;
+					this.playrate = 0;
+					//
+					this.bindings();
+					this.events();
+					this.calculate();
+					this.raf();
+				}
+
+				bindings() {
+					[
+						"events",
+						"calculate",
+						"raf",
+						"handleWheel",
+						"move",
+						"raf",
+						"handleTouchStart",
+						"handleTouchMove",
+						"handleTouchEnd",
+					].forEach((i) => {
+						this[i] = this[i].bind(this);
+					});
+				}
+
+				calculate() {
+					this.progress = 0;
+					this.wrapWidth = this.$items[0].clientWidth * this.$items.length;
+					this.$wrap.style.width = `${this.wrapWidth}px`;
+					this.maxScroll = this.wrapWidth - this.$el.clientWidth;
+				}
+
+				handleWheel(e) {
+					this.progress += e.deltaY;
+					this.move();
+				}
+
+				handleTouchStart(e) {
+					e.preventDefault();
+					this.dragging = true;
+					this.startX = e.clientX || e.touches[0].clientX;
+					this.$el.classList.add("dragging");
+				}
+
+				handleTouchMove(e) {
+					if (!this.dragging) return false;
+					const x = e.clientX || e.touches[0].clientX;
+					this.progress += (this.startX - x) * 2.5;
+					this.startX = x;
+					this.move();
+				}
+
+				handleTouchEnd() {
+					this.dragging = false;
+					this.$el.classList.remove("dragging");
+				}
+
+				move() {
+					this.progress = clamp(this.progress, 0, this.maxScroll);
+				}
+
+				events() {
+					window.addEventListener("resize", this.calculate);
+					window.addEventListener("wheel", this.handleWheel);
+					//
+					this.$el.addEventListener("touchstart", this.handleTouchStart);
+					window.addEventListener("touchmove", this.handleTouchMove);
+					window.addEventListener("touchend", this.handleTouchEnd);
+					//
+					window.addEventListener("mousedown", this.handleTouchStart);
+					window.addEventListener("mousemove", this.handleTouchMove);
+					window.addEventListener("mouseup", this.handleTouchEnd);
+					document.body.addEventListener("mouseleave", this.handleTouchEnd);
+				}
+
+				raf() {
+					// requestAnimationFrame(this.raf)
+					this.x = lerp(this.x, this.progress, 0.1);
+					this.playrate = this.x / this.maxScroll;
+					//
+					this.$wrap.style.transform = `translateX(${-this.x}px)`;
+					this.$bar.style.transform = `scaleX(${0.18 + this.playrate * 0.82})`;
+					//
+					this.speed = Math.min(100, this.oldX - this.x);
+					this.oldX = this.x;
+					//
+					this.scale = lerp(this.scale, this.speed, 0.1);
+					this.$items.forEach((i) => {
+						i.style.transform = `scale(${1 - Math.abs(this.speed) * 0.002})`;
+						i.querySelector("h2").style.transform = `scaleX(${
+							1 + Math.abs(this.speed) * 0.004
+						})`;
+					});
+				}
+			}
+
+			/*--------------------
+        Instances
+        --------------------*/
+			const scroll = new DragScroll({
+				el: ".carousel",
+				wrap: ".carousel--wrap",
+				item: ".carousel--item",
+				bar: ".carousel--progress-bar",
+			});
+
+			/*--------------------
+        One raf to rule em all
+        --------------------*/
+			const raf = () => {
+				requestAnimationFrame(raf);
+				scroll.raf();
+			};
+			raf();
+			//# sourceURL=pen.js
+		</script>
+	</body>
 </html>
