--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 			rel="stylesheet"
 		/>
 		<script src="./scrollanimate.js"></script>
+		<script src="./canvas.js"></script>
 	</head>
 
 	<body>
@@ -59,63 +60,31 @@
 					</a>
 				</div>
 			</div>
-			<!-- <div class="landmillions">
-				<ul style="transform: translateX(-34.4%) translateY(-50%)">
-					<li>
-						<h2>
-							millions of<br />
-							<span>dollars earned</span>
-						</h2>
-						<p>by creators selling on pickmy.link</p>
-					</li>
-					<li>
-						<h2>
-							millions of<br />
-							<span>dollars earned</span>
-						</h2>
-						<p>by creators selling on pickmy.link</p>
-					</li>
-					<li>
-						<h2>
-							millions of<br />
-							<span>dollars earned</span>
-						</h2>
-						<p>by creators selling on pickmy.link</p>
-					</li>
-				</ul>
-			</div> -->
-			<div class="carousel">
-				<div
-					class="carousel--wrap"
-					style="transform: translateX(-34.4%) translateY(-50%)"
-				>
-					<div class="carousel--item" style="transform: scale(1)">
-						<div><h2>millions of<br>
-                           <span> dollars earned</span>
-                           <p>by creators selling on pickmy.link</p>
-                        </h2>
-                        </div>
+			<div class="sticky-parent">
+				<div class="stickyin">
+					<div class="horizontal">
+						<div class="dim">
+							<h2>
+								millions of<br />
+								<span>dollars earned</span>
+								<p>by creators selling on pickmy.link</p>
+							</h2>
+						</div>
+						<div class="dim">
+							<h2>
+								millions of<br />
+								<span>dollars earned</span>
+								<p>by creators selling on pickmy.link</p>
+							</h2>
+						</div>
+						<div class="dim">
+							<h2>
+								millions of<br />
+								<span>dollars earned</span>
+								<p>by creators selling on pickmy.link</p>
+							</h2>
+						</div>
 					</div>
-					<div class="carousel--item" style="transform: scale(1)">
-						<div><h2>millions of<br>
-                            <span> dollars earned</span>
-                            <p>by creators selling on pickmy.link</p>
-                        </h2>
-                        </div>
-					</div>
-					<div class="carousel--item" style="transform: scale(1)">
-						<div><h2>millions of<br>
-                            <span> dollars earned</span>
-                            <p>by creators selling on pickmy.link</p>
-                        </h2>
-                        </div>
-					</div>
-				</div>
-				<div class="carousel--progress">
-					<div
-						class="carousel--progress-bar"
-						style="transform: scaleX(0.18)"
-					></div>
 				</div>
 			</div>
 		</div>
@@ -138,177 +107,192 @@
 							cupidatat non proident.
 						</p>
 					</div>
-					<div class="">
+					<!-- <div class="">
 						<span>Profile Links</span>
 						<p>
 							Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
 							cupidatat non proident.
 						</p>
-					</div>
+					</div> -->
 				</div>
 				<div class="land-vloger">
-					<img src="./images/test.webp" alt="pickmylink" />
+					<img
+						src="./images/test.png"
+						class="test-vloger"
+						height="696"
+						alt="pickmylink"
+					/>
+					<div class="">
+						<div class="man-pic">
+							<img src="./images/man.png" width="308" alt="pickmylink" />
+						</div>
+						<div class="speaker-pic">
+							<img src="./images/speaker.png" width="124" alt="pickmylink" />
+						</div>
+						<div class="camera-pic">
+							<img src="./images/camera.png" width="299" alt="pickmylink" />
+						</div>
+						<div class="list-pic">
+							<img src="./images/list-influ.png" width="499" alt="pickmylink" />
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<script id="rendered-js">
-			jQuery(".landmillions ul").on("mousemove", function (event) {
-				{
-					var mouse = {
-						x: 0, // Current x-axis position of mouse
-					};
-					var containerItems = jQuery(".landmillions ul").width();
-					var docWidth = jQuery(".landmillions ul").width();
+		<canvas id="stage"></canvas>
+		<script>
+			var stage = document.querySelector("#stage"),
+				cb = stage.getBoundingClientRect(),
+				ctx = stage.getContext("2d"),
+				ratio = window.devicePixelRatio || 1,
+				mouse = {
+					x: 0,
+					y: 0,
+				},
+				dots = [],
+				wide = 18,
+				high = wide / 1.1,
+				size = 30,
+				padding = 50;
+			window.onmousemove = function (e) {
+				mouse.x = e.pageX * ratio;
+				mouse.y = e.pageY * ratio;
+			};
 
-					var docMinWidth = jQuery(".landmillions ul").width();
+			window.onresize = function () {
+				ctx.canvas.width = window.innerWidth * ratio;
+				ctx.canvas.height = window.innerHeight * ratio;
+				cb = stage.getBoundingClientRect();
+			};
+			window.onresize();
 
-					mouse.x = event.clientX || event.pageX;
+			function create() {
+				var d = 20;
+				for (var i = -1; ++i < wide; ) {
+					var x =
+						Math.floor(((cb.width - padding * 2) / (wide - 1)) * i + padding) *
+						ratio;
 
-					mouse = mouse.x - 0;
-					var Translate = (mouse * 200) / docWidth;
+					for (var j = -1; ++j < high; ) {
+						var y =
+							Math.floor(
+								((cb.height - padding * 2) / (high - 1)) * j + padding
+							) * ratio;
 
-					jQuery(".landmillions ul").css({
-						"-webkit-transform":
-							"translateX(-" + Translate + "%) translateY(-50%)",
-						"-moz-transform":
-							"translateX(-" + Translate + "%) translateY(-50%)",
-						transform: "translateX(-" + Translate + "%) translateY(-50%)",
-					});
-				}
-			});
-		</script>
-		<script id="rendered-js">
-			const lerp = (f0, f1, t) => (1 - t) * f0 + t * f1;
-			const clamp = (val, min, max) => Math.max(min, Math.min(val, max));
-
-			class DragScroll {
-				constructor(obj) {
-					this.$el = document.querySelector(obj.el);
-					this.$wrap = this.$el.querySelector(obj.wrap);
-					this.$items = this.$el.querySelectorAll(obj.item);
-					this.$bar = this.$el.querySelector(obj.bar);
-					this.init();
-				}
-
-				init() {
-					this.progress = 0;
-					this.speed = 0;
-					this.oldX = 0;
-					this.x = 0;
-					this.playrate = 0;
-					//
-					this.bindings();
-					this.events();
-					this.calculate();
-					this.raf();
-				}
-
-				bindings() {
-					[
-						"events",
-						"calculate",
-						"raf",
-						"handleWheel",
-						"move",
-						"raf",
-						"handleTouchStart",
-						"handleTouchMove",
-						"handleTouchEnd",
-					].forEach((i) => {
-						this[i] = this[i].bind(this);
-					});
-				}
-
-				calculate() {
-					this.progress = 0;
-					this.wrapWidth = this.$items[0].clientWidth * this.$items.length;
-					this.$wrap.style.width = `${this.wrapWidth}px`;
-					this.maxScroll = this.wrapWidth - this.$el.clientWidth;
-				}
-
-				handleWheel(e) {
-					this.progress += e.deltaY;
-					this.move();
-				}
-
-				handleTouchStart(e) {
-					e.preventDefault();
-					this.dragging = true;
-					this.startX = e.clientX || e.touches[0].clientX;
-					this.$el.classList.add("dragging");
-				}
-
-				handleTouchMove(e) {
-					if (!this.dragging) return false;
-					const x = e.clientX || e.touches[0].clientX;
-					this.progress += (this.startX - x) * 2.5;
-					this.startX = x;
-					this.move();
-				}
-
-				handleTouchEnd() {
-					this.dragging = false;
-					this.$el.classList.remove("dragging");
-				}
-
-				move() {
-					this.progress = clamp(this.progress, 0, this.maxScroll);
-				}
-
-				events() {
-					window.addEventListener("resize", this.calculate);
-					window.addEventListener("wheel", this.handleWheel);
-					//
-					this.$el.addEventListener("touchstart", this.handleTouchStart);
-					window.addEventListener("touchmove", this.handleTouchMove);
-					window.addEventListener("touchend", this.handleTouchEnd);
-					//
-					window.addEventListener("mousedown", this.handleTouchStart);
-					window.addEventListener("mousemove", this.handleTouchMove);
-					window.addEventListener("mouseup", this.handleTouchEnd);
-					document.body.addEventListener("mouseleave", this.handleTouchEnd);
-				}
-
-				raf() {
-					// requestAnimationFrame(this.raf)
-					this.x = lerp(this.x, this.progress, 0.1);
-					this.playrate = this.x / this.maxScroll;
-					//
-					this.$wrap.style.transform = `translateX(${-this.x}px)`;
-					this.$bar.style.transform = `scaleX(${0.18 + this.playrate * 0.82})`;
-					//
-					this.speed = Math.min(100, this.oldX - this.x);
-					this.oldX = this.x;
-					//
-					this.scale = lerp(this.scale, this.speed, 0.1);
-					this.$items.forEach((i) => {
-						i.style.transform = `scale(${1 - Math.abs(this.speed) * 0.002})`;
-						i.querySelector("h2").style.transform = `scaleX(${
-							1 + Math.abs(this.speed) * 0.004
-						})`;
-					});
+						dots.push({
+							x: x,
+							y: y,
+							ox: x,
+							oy: y,
+						});
+					}
 				}
 			}
 
-			/*--------------------
-        Instances
-        --------------------*/
-			const scroll = new DragScroll({
-				el: ".carousel",
-				wrap: ".carousel--wrap",
-				item: ".carousel--item",
-				bar: ".carousel--progress-bar",
-			});
+			create();
 
-			/*--------------------
-        One raf to rule em all
-        --------------------*/
-			const raf = () => {
-				requestAnimationFrame(raf);
-				scroll.raf();
+			function render() {
+				// clear the canvas
+				ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
+				// choose the dot color
+				ctx.fillStyle = "#fff";
+				// for each line
+				for (var i = 0; i < dots.length; i++) {
+					var s = dots[i];
+					var v = getV(s);
+					ctx.beginPath();
+					ctx.moveTo(s.x, s.y);
+					ctx.lineTo(s.x + v.x, s.y + v.y);
+					ctx.strokeStyle = "#fff";
+					ctx.lineWidth = 1 * ratio;
+					ctx.stroke();
+					ctx.closePath();
+				}
+
+				// for each dot
+				for (var i = 0; i < dots.length; i++) {
+					var s = dots[i];
+
+					var v = getV(s);
+
+					ctx.circle(s.x + v.x, s.y + v.y, s.size * ratio, true);
+					ctx.fill();
+				}
+			}
+
+			function getV(dot) {
+				var d = getDistance(dot, mouse);
+				dot.size = (200 - d) / 20;
+				dot.size = dot.size < 1 ? 1 : dot.size;
+
+				dot.angle = getAngle(dot, mouse);
+
+				return {
+					x: (d > 20 ? 20 : d) * Math.cos((dot.angle * Math.PI) / 180),
+					y: (d > 20 ? 20 : d) * Math.sin((dot.angle * Math.PI) / 180),
+				};
+			}
+
+			function getAngle(obj1, obj2) {
+				var dX = obj2.x - obj1.x;
+				var dY = obj2.y - obj1.y;
+				var angleDeg = (Math.atan2(dY, dX) / Math.PI) * 180;
+				return angleDeg;
+			}
+
+			function getDistance(obj1, obj2) {
+				var dx = obj1.x - obj2.x;
+				var dy = obj1.y - obj2.y;
+				return Math.sqrt(dx * dx + dy * dy);
+			}
+			CanvasRenderingContext2D.prototype.circle = function (x, y, r) {
+				this.beginPath();
+				this.arc(x, y, r, 0, 2 * Math.PI, false);
+				this.closePath();
 			};
-			raf();
+			window.requestAnimFrame = (function () {
+				return (
+					window.requestAnimationFrame ||
+					window.webkitRequestAnimationFrame ||
+					window.mozRequestAnimationFrame ||
+					function (callback) {
+						window.setTimeout(callback, 1000 / 60);
+					}
+				);
+			})();
+
+			(function animloop() {
+				render();
+
+				requestAnimationFrame(animloop);
+			})();
+		</script>
+		<script id="rendered-js">
+			"use strict";
+
+			document.addEventListener("scroll", horizontalScroll);
+
+			let sticky = document.querySelector(".stickyin");
+			let stickyParent = document.querySelector(".sticky-parent");
+
+			let scrollWidth = sticky.scrollWidth;
+			let verticalScrollHeight =
+				stickyParent.getBoundingClientRect().height -
+				sticky.getBoundingClientRect().height;
+
+			//Scroll function
+			function horizontalScroll() {
+				//Checking whether the sticky element has entered into view or not
+				let stickyPosition = sticky.getBoundingClientRect().top;
+				if (stickyPosition > 1) {
+					return;
+				} else {
+					let scrolled = stickyParent.getBoundingClientRect().top; //how much is scrolled?
+					sticky.scrollLeft =
+						(scrollWidth / verticalScrollHeight) * -scrolled * 0.85;
+				}
+			}
 			//# sourceURL=pen.js
 		</script>
 	</body>
