--- a/public/canvas.html
+++ b/public/canvas.html
@@ -14,8 +14,8 @@
 			height: 100vh;
 			box-sizing: border-box;
 			object-fit: none;
-			padding-bottom: 28px;
-			margin-top: 20px;
+			/* padding-bottom: 28px;
+			margin-top: 20px; */
 		}
 	</style>
 	<body>
