--- a/public/index.html
+++ b/public/index.html
@@ -1151,10 +1151,14 @@
 			function inputFocus(event) {
 				document.getElementById("profile-outline").style.border =
 					"2px solid white";
+				document.getElementById("profile-outline").style.transition =
+				    "1s";
 			}
 			function hideBorder() {
 				document.getElementById("profile-outline").style.border =
 					"2px solid #0f0f0f";
+					document.getElementById("profile-outline").style.transition =
+				    "1s";
 			}
 		</script>
 		<!-- Scroll new design script smooth scroll -->
