changes to design issues fixing

--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,12 @@
 					one <span>link.</span><br />
 					endless possibilities
 				</h1>
-				<p class="zoo-in-i">
+				<p>
 					Share the online content you create, curate, and sell with over 30
 					million others. each from a different bio link.
 				</p>
 			</div>
-			<div class="profile-cre">
+			<div class="profile-cre zoo-in-btn" >
 				<div class="profile-input">
 					<div class="int-focu" id="profile-outline">
 						<span>pickmy.link/ </span>
@@ -73,7 +73,6 @@
 				</div>
 			</div>
 
-			<!-- Scroll move to section -->
 			<!--Mobile view scroll   -->
 			<div class="mobile-scroll" id="mobile-scroll">
 				<div id="text-section-1" class="text-section-1">
@@ -98,7 +97,7 @@
 					</h2>
 				</div>
 			</div>
-			<!--  -->
+			<!-- Scroll move to section -->
 			<div class="pin-spacer" id="text-view">
 				<div class="wrapper d-flex">
 					<section
