modified design changes

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
 								<div id="child" class="infludrop-btn"></div>
 							</div>
 
-							<p>
+							<p class="vloger-choi">
 								Then you have an endless range of choices for a micro-landing
 								page.
 							</p>
@@ -227,11 +227,6 @@
 						<div id="amount">30L</div>
 						*
 					</h2>
-					<!-- <h2 id="total-value2" style="display: none;">
-						<span class="rupee">₹</span>
-						<div id="tooltip4">30L</div>
-						*
-					</h2> -->
 					<!-- id="value" animation script number -->
 					<span class="earn">you could earn <span class="emoji">🤑</span></span>
 					<p>
@@ -308,7 +303,7 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channel_profile4.jpg" alt="Avatar" />
+										<img src="./images/channel_profile4.jpg" alt="cybertamizha" />
 									</div>
 									<a
 										class="flip-card-back"
@@ -326,7 +321,7 @@
 									<div class="flip-card-front">
 										<img
 											src="./images/channels_profile3.jpg"
-											alt="niram-logo"
+											alt="DANJRVLOGS"
 										/>
 									</div>
 									<a
@@ -334,7 +329,7 @@
 										href="https://www.youtube.com/@DANJRVLOGS"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>DAN JR VLOGS</h3>
 									</a>
@@ -343,14 +338,14 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channels_profile.jpg" alt="niram-logo" />
+										<img src="./images/channels_profile.jpg" alt="ChefDeenaKitchen" />
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@ChefDeenaKitchen"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Chef Deena’s Kitchen</h3>
 									</a>
@@ -359,14 +354,14 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channel_profile9.jpg" alt="niram-logo" />
+										<img src="./images/channel_profile9.jpg" alt="Gpmuthu" />
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@GpmuthuOfficialtamil"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Gpmuthu Official</h3>
 									</a>
@@ -375,14 +370,14 @@
 							<div class="flip-card">
 								<div class="flip-card-inner">
 									<div class="flip-card-front">
-										<img src="./images/channel_profile5.jpg" alt="niram-logo" />
+										<img src="./images/channel_profile5.jpg" alt="PeppaFoodie" />
 									</div>
 									<a
 										class="flip-card-back"
 										href="https://www.youtube.com/@PeppaFoodie"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Peppa Foodie</h3>
 									</a>
@@ -398,7 +393,7 @@
 										href="https://www.youtube.com/@HemasKitchen"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Hema's Kitchen</h3>
 									</a>
@@ -417,7 +412,7 @@
 										href="https://www.youtube.com/@CinemaTicketTamil"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>Cinema Ticket</h3>
 									</a>
@@ -436,7 +431,7 @@
 										href="https://www.youtube.com/@IdrisExplores"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Idris Explores</h3>
 									</a>
@@ -455,7 +450,7 @@
 										href="https://www.youtube.com/@SathishDeepasd"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Sathish Deepa</h3>
 									</a>
@@ -474,7 +469,7 @@
 										href="https://www.youtube.com/@vivekjadoodeepika9168"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Vivekjadoo Deepika</h3>
 									</a>
@@ -493,7 +488,7 @@
 										href="https://www.youtube.com/@TamilTrekkerOfficial"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Tamil Trekker</h3>
 									</a>
@@ -512,7 +507,7 @@
 										href="https://www.youtube.com/@BusinessTamizha"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Business Tamizha</h3>
 									</a>
@@ -531,7 +526,7 @@
 										href="https://www.youtube.com/@snazzytamilachi"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>Snazzy Tamilachi</h3>
 									</a>
@@ -570,7 +565,7 @@
 										href="https://www.instagram.com/karthickrofl/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>karthickrofl</h3>
 									</a>
@@ -589,7 +584,7 @@
 										href="https://www.instagram.com/deepabalu__official/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>deepabalu__official</h3>
 									</a>
@@ -608,7 +603,7 @@
 										href="https://www.instagram.com/chennaivlogger/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link" />
 										<p>Pickmy.link</p>
 										<h3>chennaivlogger</h3>
 									</a>
@@ -627,7 +622,7 @@
 										href="https://www.instagram.com/nataraj_ks_raj/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>nataraj_ks_raj</h3>
 									</a>
@@ -646,7 +641,7 @@
 										href="https://www.instagram.com/twin_food_delight/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>twin_food_delight</h3>
 									</a>
@@ -665,7 +660,7 @@
 										href="https://www.instagram.com/arun_aravind_twins/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>arun_aravind_twins</h3>
 									</a>
@@ -681,7 +676,7 @@
 										href="https://www.instagram.com/popz_cruze/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>popz_cruze</h3>
 									</a>
@@ -700,7 +695,7 @@
 										href="https://www.instagram.com/kovaikothanar/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>kovaikothanar</h3>
 									</a>
@@ -719,7 +714,7 @@
 										href="https://www.instagram.com/nivesfoodflavour/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>nivesfoodflavour</h3>
 									</a>
@@ -738,7 +733,7 @@
 										href="https://www.instagram.com/namma_ooru_couple/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>namma_ooru_couple</h3>
 									</a>
@@ -757,7 +752,7 @@
 										href="https://www.instagram.com/pooja__rajendran/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>pooja__rajendran</h3>
 									</a>
@@ -776,7 +771,7 @@
 										href="https://www.instagram.com/miss_motoaddictto/"
 										target="_blank"
 									>
-										<img src="./images/link_re.svg" />
+										<img src="./images/link_re.svg" alt="link"/>
 										<p>Pickmy.link</p>
 										<h3>miss_motoaddictto</h3>
 									</a>
@@ -792,7 +787,7 @@
 		<div class="lan-asked">
 			<div class="pick-askme">
 				<div class="pic-le">
-					<img src="./images/giphy.gif" alt="camera" />
+					<img src="./images/giphy.gif" alt="faq" />
 					<span>We understand that you have some</span>
 					<h4>Frequently Asked Questions.</h4>
 				</div>
